--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -48,6 +48,19 @@
                         </div>
                     </div>
 
+                    <!--EPF NO -->
+
+                    <div class="form-row text-right">
+                        <div class="col-md-4">
+                            <label class="control-label" for="epf">EPF NO :</label>
+                        </div>
+                        <div class="col-md-8">
+                            <input id="epf" th:field="*{epf}" class="form-control" tabindex="4" type="text" required/>
+                            <span id="epfError" th:errors="*{epf}"
+                                  th:if="${#fields.hasErrors('epf')}" class="error">Error EPF NO</span>
+                        </div>
+                    </div>
+
                     <!--Tittle -->
 
                     <div class="form-row text-right">
@@ -130,21 +143,7 @@
                                   th:if="${#fields.hasErrors('dateOfBirth')}" class="error">Error Birthday</span>
                         </div>
                     </div>
-                    <!--Blood group-->
-                    <div class="form-row text-right">
-                        <div class="col-md-4">
-                            <label class="control-label" for="bloodGroup">Blood Group :</label>
-                        </div>
-                        <div class="col-md-8">
-                            <select id="bloodGroup" th:field="*{bloodGroup}" class="form-control" tabindex="9" required>
-                                <option value="">Please select</option>
-                                <option th:each="bloodGroups : ${bloodGroup}"
-                                        th:text="${bloodGroups.bloodGroup}"
-                                        th:value="${bloodGroups}"
-                                        th:selected="${bloodGroups==employee.bloodGroup?'selected':'unselected'}">Please select</option>
-                            </select>
-                        </div>
-                    </div>
+
                     <!--Designation-->
                     <div class="form-row text-right">
                         <div class="col-md-4">
@@ -197,7 +196,7 @@
                     <!--Mobile Number One-->
                     <div class="form-row text-right">
                         <div class="col-md-4">
-                            <label class="control-label" for="mobileOne">Mobile One No :</label>
+                            <label class="control-label" for="mobileOne">Mobile No (1) :</label>
                         </div>
                         <div class="col-md-8">
                             <input id="mobileOne" th:field="*{mobileOne}" class="form-control mobile" tabindex="13" type="text"
@@ -210,7 +209,7 @@
                     <!--Mobile Number Two-->
                     <div class="form-row text-right">
                         <div class="col-md-4">
-                            <label class="control-label" for="mobileTwo">Mobile Two No :</label>
+                            <label class="control-label" for="mobileTwo">Mobile No (2) :</label>
                         </div>
                         <div class="col-md-8">
                             <input id="mobileTwo" th:field="*{mobileTwo}" class="form-control mobile" tabindex="14" type="text"
@@ -231,17 +230,7 @@
                                   th:if="${#fields.hasErrors('land')}" id="landError">Error Land Number</span>
                         </div>
                     </div>
-                    <!--Email-->
-                    <div class="form-row text-right">
-                        <div class="col-md-4">
-                            <label class="control-label" for="email">Email :</label>
-                        </div>
-                        <div class="col-md-8">
-                            <input id="email" th:field="*{email}" class="form-control" tabindex="16" type="email" required/>
-                            <span class="error" th:errors="*{email}"
-                                  th:if="${#fields.hasErrors('email')}" id="emailError">Error Email</span>
-                        </div>
-                    </div>
+
                     <!--Office email-->
                     <div class="form-row text-right">
                         <div class="col-md-4">
@@ -280,20 +269,7 @@
                             </select>
                         </div>
                     </div>
-                    <!--Current Working Place-->
-               <!--     <div class="form-row text-right">
-                        <div class="col-md-4">
-                            <label class="control-label" for="workingPlace">Employee Working Place :</label>
-                        </div>
-                        <div class="col-md-8">
-                            &lt;!&ndash;<select id="workingPlace" th:field="*{workingPlace}" class="form-control" tabindex="20" required>
-                                <option value="">Please select</option>
-                                <option th:each="workingPlace : ${workingPlaces}"
-                                        th:text="${workingPlace.name}"
-                                        th:value="${workingPlace.id}"></option>
-                            </select>&ndash;&gt;
-                        </div>
-                    </div>-->
+
                     <!--Created by and created at-->
                     <div id="updateStatus" th:if="${addStatus==false}">
                         <div class="form-row text-right">
