--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -48,7 +48,7 @@
                     <thead>
                     <tr>
                         <th> Index</th>
-                        <th> Pay Role Number</th>
+                        <th> EPF No</th>
                         <th> Name</th>
                         <th> Mobile</th>
                         <th> Designation</th>
@@ -59,7 +59,7 @@
                     <tbody>
                     <tr th:each="employee, rowCount : ${employees}">
                         <th th:text="${rowCount.count}"></th>
-                        <th th:text="${employee.payRoleNumber}"></th>
+                        <th th:text="${employee.epf}"></th>
                         <th th:text="${employee.callingName}"></th>
                         <th th:text="${employee.mobileOne}"></th>
                         <th th:text="${employee.designation.designation}"></th>
