--- a/src/main/resources/templates/purchaseOrder/addPurchaseOrder.html
+++ b/src/main/resources/templates/purchaseOrder/addPurchaseOrder.html
@@ -2,36 +2,39 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>addpr</title>
+    <title>JN_Super</title>
 </head>
 <body>
-<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+<!--Multi CSS-->
+<link th:href="@{/css/multi.css}" media="all" rel="stylesheet" type="text/css"/>
 
-<!--heading Area-->
+<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+<!--Heading Area -->
 <div class="container-fluid bg-dark form-Border">
     <div class="row text-center formManagement border-info">
-        <!--View list Button-->
+        <!--View List Button-->
         <div class="col">
-            <a href="/pr" class="btn btn-primary" tabindex="1">
-                <i class="fa fa-list" style="font-size: 20px"></i>&nbsp; View List
+            <a href="/purchaseOrder" class="btn btn-primary">
+                <i class="fa fa-list" style="font-size: 20px"></i>&nbsp;&nbsp;View List
             </a>
         </div>
         <!--Form Name-->
         <div class="col">
             <h2 class="text-white text-center">
                 <strong>
-                    <span th:text="${addStatus==true?'Add New PR':'Update PR Details'}"></span>
+                    Purchase Order Management
                 </strong>
             </h2>
         </div>
         <!--Home Button-->
         <div class="col">
-            <a class="btn btn-primary" href="/home" tabindex="2">
-                <i class="fa fa-home" style="font-size: 20px"></i>&nbsp;Home
+            <a class="btn btn-primary" href="/home">
+                <i class="fa fa-home" style="font-size: 20px"></i> &nbsp;&nbsp;Home
             </a>
         </div>
     </div>
 </div>
+
 <!--Form Content - start -->
 <div class="container-fluid bg-info">
     <!--Supplier Search - Start-->
@@ -39,19 +42,73 @@
         <form id="form" class="form-inline" th:action="${'/purchaseOrder/find'}"
               th:object="${purchaseOrder}" method="POST">
             <div class="form-row">
-                <label for="searchCriteria" class="mr-5 ml-5">Search By</label>
-                <select class="form-control mr-5 ml-5" id="searchCriteria">
-                    <option value="" disabled>Please Select</option>
-                    <option value="name">Name</option>
-                    <option value="code">Code</option>
-                    <option value="contactOne">Mobile Number</option>
-                </select>
-                <label for="searchValue" class="mr-5 ml-5">Search Value</label>
-                <input type="text" class="form-control mr-5 ml-5" name="contactOne" id="searchValue">
-                <!--Search Button-->
-                <button class="btn btn-success mr-5 ml-5" type="submit" tabindex="9" id="searchButton">
-                    <i class="fa fa-search " style="font-size: 20px"></i>&nbsp;&nbsp; Search
-                </button>
+               <div class="form-group col-md-6 col-sm-6 text-left flex-column">
+                   <!--Id-->
+                   <div id="idStatus" th:if="${addStatus==false}" class="form-row text-right">
+                       <div class="col-md-4">
+                           <label class="control-label" for="id">ID :</label>
+                       </div>
+                       <div class="col-md-8">
+                           <input id="id" th:field="*{id}" class="form-control" type="text" readonly/>
+                       </div>
+                   </div>
+
+                   <!--Code-->
+                   <div class="form-row text-right">
+                       <div class="col-md-4">
+                           <label class="control-label" for="code">Code :</label>
+                       </div>
+                       <div class="col-md-8">
+                           <input id="code" th:field="*{code}" class="form-control" tabindex="3" type="text" required/>
+                           <span id="codeError" th:errors="*{code}"
+                                 th:if="${#fields.hasErrors('code')}" class="error">Error Name</span>
+                       </div>
+                   </div>
+
+                   <!--Name-->
+                   <div class="form-row text-right">
+                       <div class="col-md-4">
+                           <label class="control-label" for="name">Name :</label>
+                       </div>
+                       <div class="col-md-8">
+                           <input id="name" th:field="*{name}" class="form-control" tabindex="3" type="text" required/>
+                           <span id="nameError" th:errors="*{name}"
+                                 th:if="${#fields.hasErrors('name')}" class="error">Error Name</span>
+                       </div>
+                   </div>
+
+                   <!--Description-->
+                   <div class="form-row text-right">
+                       <div class="col-md-4">
+                           <label class="control-label" for="description">Description :</label>
+                       </div>
+                       <div class="col-md-8">
+                           <input id="description" th:field="*{description}" class="form-control" tabindex="3" type="text" required/>
+                           <span id="descriptionError" th:errors="*{description}"
+                                 th:if="${#fields.hasErrors('description')}" class="error">Error Name</span>
+                       </div>
+                   </div>
+
+                   <!--P order status-->
+                   <div class="form-row text-right">
+                       <div class="col-md-4">
+                           <label class="control-label" for="purchaseOrderStatus">Status :</label>
+                       </div>
+                       <div class="col-md-8">
+                           <select id="purchaseOrderStatus" th:field="*{purchaseOrderStatus}" class="form-control" tabindex="19" required>
+                               <option value="">Please select</option>
+                               <option th:each="purchaseOrderStatuss : ${purchaseOrderStatus}"
+                                       th:text="${purchaseOrderStatuss.purchaseOrderStatus}"
+                                       th:value="${purchaseOrderStatuss}"
+                                       th:selected="${purchaseOrderStatuss==purchaseOrder.purchaseOrderStatus?'selected':'unselected'}"></option>
+                           </select>
+                       </div>
+                   </div>
+
+
+               </div>
+
+
             </div>
         </form>
     </div>
@@ -61,30 +118,52 @@
         <div th:replace="~{supplier/supplier :: supplierFragment}"></div>
     </div>
     <!--Supplier List Show - end-->
-    <!--Supplier Purchase Order add- start-->
+    <!--Supplier Item add- start-->
     <div class="col-12 flex-column" th:if="${supplierDetailShow==false}">
-        <section th:replace="~{supplier/supplier-detail :: supplierDetailsFragment}"></section>
-        <!--Supplier Item add Form - start-->
-        <form th:action="${'/purchaseOrder'}" method="POST" class="mb-5" th:object="${purchaseOrder}">
-            <div class="col-md-4">
-                <label class="control-label">Enter Item's Quantity</label>
-            </div>
-            <div class="form-group" th:each="item, index : ${supplierDetail.items}">
-                <input type="hidden" th:name="${'purchaseOrderItems[__${index.index}__].item'}" th:value="${item.id}">
-                <div class="col-8">
-                    <div class="form-row">
-                        <div class="col-5"><label class="control-label" for="quantity"
-                                                  th:text="${item.name}"></label></div>
-                        <div class="col-4"><input id="quantity" type="text"
-                                                  th:name="${'purchaseOrderItems[__${index.index}__].quantity'}"
-                                                  class="form-control"></div>
-                    </div>
+        <a href="#hrefCollapse" class="btn btn-primary col-12" data-toggle="collapse" aria-expanded="false"
+           aria-controls="hrefCollapse">Show Supplier Details</a>
+        <div class="collapse" id="hrefCollapse">
+            <section th:replace="~{supplier/supplier-detail :: supplierDetailsFragment}"></section>
+        </div>
+        <!--Purchase Order Item add Form - start-->
+        <form th:action="${'/purchaseOrder'}" method="POST" class="mb-5" th:object="${purchaseOrderDetail}">
+            <input type="hidden" th:name="${'purchaseOrder'}" th:value="${supplierDetail.id}">
+            <div class="form-row col-md-6" th:if="${purchaseOrderItemEdit==false}">
+                <div class="col-md-4">
+                    <label class="control-label" for="item">Select Items:</label>
                 </div>
+                <div class="text-left col-md-8">
+                    <select class="form-control" id="item">
+                        <option value="" selected> Please Select</option>
+                        <option th:each="item : ${items}"
+                                th:value="${item.id}"
+                                th:text="${item.name}"
+                              > Please Select
+                        </option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-row col-md-12 col-sm-12 mt-4 text-center">
+                <!--Add new Item-->
+                <table class="table table-striped table-inverse" id="selectedItemInTable">
+                    <legend><strong> <i>Selected Items </i></strong></legend>
+                    <thead class="thead-inverse">
+                    <tr>
+                        <th>Index</th>
+                        <th>Item Name</th>
+                        <th>ROP</th>
+                        <th>Price</th>
+                        <th>Quantity</th>
+                        <th>Status</th>
+                    </tr>
+                    </thead>
+                </table>
             </div>
             <!--Button-->
             <div class="form-group col-md-12 col-sm-12 mt-4 text-center flex-column ">
                 <!--Back Button-->
-                <a class="btn btn-dark" tabindex="11" href="/purchaseOrder/all">
+                <a class="btn btn-dark" tabindex="11" href="/supplier">
                     <i class="fas fa-arrow-circle-left" style="font-size: 20px"></i>&nbsp;&nbsp;Back
                 </a>
                 <!--Save Button-->
@@ -97,21 +176,112 @@
                 </button>
             </div>
         </form>
-        <!--Supplier Purchase Order add Form - end-->
+        <!--Supplier Item add Form - end-->
     </div>
 </div>
+
 <!--Supplier Item add - end-->
 <footer th:replace="~{fragments/footer :: footerFragment}"></footer>
-<!--script include-->
 <script th:replace="~{fragments/script :: scriptFragment}"></script>
 <script>
     $(document).ready(function () {
-        // disableAndEnable("searchValue",true);
-        // disableAndEnable("searchButton",true);
+//when search criteria add
+        $("#searchCriteria").bind("change", function () {
+            $("#searchValue").attr("name", $(this).val());
+        });
     });
-    //todo ->
-    //if there is value on {search by} search value input should be enable
-    //there are values on seach by and search value search button should be enable
+    //add new item and price
+    $("#item").bind('change', function () {
+        let valueA = optionElementRemove("#item");
+        tableRowAdd(valueA);
+    });
+    //table row remove
+    let tableRowRemove = function (obj) {
+
+        let itemIndex = obj.parentNode.parentNode.rowIndex;
+        let itemSelected = document.getElementById("selectedItemInTable").rows.item(itemIndex).cells;
+
+        let removeItemValue = itemSelected[1].childNodes[1].nextSibling.nextSibling.attributes.value.nodeValue;
+        let removeItemText = itemSelected[1].childNodes[1].firstChild.nodeValue;
+
+        $("#item").append(new Option(removeItemText, removeItemValue));
+        let removeRow = `#selectedItemInTable tr:eq(${itemIndex})`
+        $(removeRow).remove();
+
+
+    }
+    //option tag remove
+    let optionElementRemove = function (id) {
+        let selectedValue = $(id).val();
+        let selectedItemId = `${id} option[value='${selectedValue}']`;
+        let selectedValueInnerHTML = $(selectedItemId).html();
+        $(selectedItemId).remove();
+        return {name: selectedValueInnerHTML, value: selectedValue};
+
+    }
+
+    //bring ROP
+    let rop = function(value){
+
+        let rows = $("#selectedItemInTable tr").length;
+        let rowCount = rows - 1;
+
+        let rows = $("input[name='pname[]']")
+            .map(function(){return $(this).val();}).get();
+
+
+    /*$querySupplierItem = mysqli_query($con, 'SELECT * FROM SupplierItem');
+    while ($person = mysqli_fetch_array($querySupplierItem)) {
+        echo '<option value="'.$item["id"].'">'.$item["name"].' '.$item["rop"].'</option>';
+    }*/
+
+
+
+    }
+
+
+
+
+    //table row add
+    let tableRowAdd = function (value) {
+        let rows = $("#selectedItemInTable tr").length;
+        let rowCount = rows - 1;
+        let html = `<tr>
+                        <td>${rows}</td>
+
+                        <td>
+                            <span>${value.name}</span>
+                            <input type="hidden" name="supplierItems[${rowCount}].item.id" value="${value.value}">
+                        </td>
+
+                         <td>
+                            <span>${value.rop}</span>
+                            <input type="hidden" name="supplierItems[${rowCount}].item.rop" value="${value.value}">
+
+                        </td>
+
+                        <td>
+                         <div class="form-row form-inline">
+                                <label>
+                            Rs. <input type="number" min="0" step="0.5" class="form-control" name="supplierItems[${rowCount}].price" required>
+                                </label>
+                         </div>
+                        </td>
+
+                             <td>
+                            <span>${value.quantity}</span>
+                            <input type="hidden" name="supplierItems[${rowCount}].item.id" value="${value.value}">
+                        </td>
+
+                        <td>
+                            <button type="button" class="btn btn-outline-danger" onclick="tableRowRemove(this)">Remove</button>
+                        </td>
+                    </tr>`;
+
+        $("#selectedItemInTable tr:last").after(html);
+
+    }
+
 
 </script>
 </body>
