--- a/src/main/resources/templates/purchaseOrder/purchaseOrder.html
+++ b/src/main/resources/templates/purchaseOrder/purchaseOrder.html
@@ -24,7 +24,7 @@
         </div>
         <!-- Home Button-->
         <div class="col">
-            <a href="/home" id="searchShow" class="btn btn-purchaseOrderimary" tabindex="2">
+            <a href="/home" id="searchShow" class="btn btn-primary" tabindex="2">
                 <!--<i class="fa fa-user " style="font-size: 20px"></i>&nbsp;Add&nbsp;-->
                 <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
                 &nbsp;
@@ -35,7 +35,8 @@
 <div class="container-fluid bg-dark formBorder text-center">
     <!--Table view-->
     <div class="col">
-        <div class="col" id="purchaseRequestListPresent" th:if="${not #lists.isEmpty(purchaseRequests)}">
+        <div class="col" id="purchaseRequestListPresent"
+             th:if="${not #lists.isEmpty(purchaseOrders)}">
             <table class="table table-hover table-striped" id="myTable">
                 <thead>
                     <tr>
@@ -45,22 +46,34 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="purchaseOrder, rowCount : ${purchaseRequests}">
+                    <tr th:each="purchaseOrder, rowCount : ${purchaseOrders}">
                         <th th:text="${rowCount.count}"></th>
-                        <th th:text="${purchaseOrder.purchaseOrderDate}"></th>
-                        <th>
-                            <a id="purchaseRequestView" th:href="${'/purchaseOrder/view' + purchaseOrder.id}" class="btn btn-purchaseOrderimary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
+                       <!-- <th th:text="${purchaseOrder.purchaseOrderDate}"></th>-->
+                        <th th:if="${purchaseOrder !=true}">
+                            <a th:href="${'/purchaseOrderItem/purchaseOrder/' + purchaseOrder.id}" class="btn btn-primary btn-sm"><i
+                                    class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;Item Price</a>
+                            <a th:href="${'/purchaseOrder/' + purchaseOrder.id}" class="btn btn-primary btn-sm"><i
+                                    class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
+                            <a th:href="${'/purchaseOrder/edit/' + purchaseOrder.id}" class="btn btn-success btn-sm"><i
+                                    class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
+                            <a th:href="${'/purchaseOrder/delete/' + purchaseOrder.id}" class="btn btn-danger btn-sm">
+                                <!--th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"--> <i
+                                    class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
+                        </th>
+
+                        <!--<th>
+                            <a id="purchaseRequestView" th:href="${'/purchaseOrder/view' + purchaseOrder.id}" class="btn btn-primary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
                             <a id="purchaseRequestEdit" th:href="${'/purchaseOrder/edit/' + purchaseOrder.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
                             <a id="purchaseRequestRemove" th:href="${'/purchaseOrder/delete/' + purchaseOrder.id}" class="btn btn-danger btn-sm">
-                                <!--th:if="${#authorization.expurchaseOrderession('hasRole(''ROLE_ADMIN'')')}"--><i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
-                        </th>
+                                &lt;!&ndash;th:if="${#authorization.expurchaseOrderession('hasRole(''ROLE_ADMIN'')')}"&ndash;&gt;<i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
+                        </th>-->
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
     <!--Error-->
-    <div class="row" th:if="${ #lists.isEmpty(purchaseRequests)}">
+    <div class="row" th:if="${ #lists.isEmpty(purchaseOrders)}">
         <div class="col-sm-12">
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
