--- a/src/main/resources/templates/supplier/supplier.html
+++ b/src/main/resources/templates/supplier/supplier.html
@@ -40,7 +40,8 @@
                 <thead>
                     <tr>
                         <th> Index</th>
-                        <th> Company Name</th>
+                        <th> Code</th>
+                        <th> Name</th>
                         <th> Contact No1</th>
                         <th> Email</th>
                         <th> Address</th>
@@ -50,6 +51,7 @@
                 <tbody>
                     <tr th:each="supplier, rowCount : ${suppliers}">
                         <th th:text="${rowCount.count}"></th>
+                        <th th:text="${supplier.code}"></th>
                         <th th:text="${supplier.name}"></th>
                         <th th:text="${supplier.contactOne}"></th>
                         <th th:text="${supplier.email}"></th>
