--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -3,19 +3,17 @@
 <head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
-    <script>
-        $(document).ready(function(){ $("h2").addClass("animated bounce"); });
-    </script>
 </head>
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <div class="container-fluid">
     <div class="main-section">
+        <p class="welcome-Notes">Welcome To Complaint Management System of Department of
+                                 Excise</p>
         <div class="col-12">
             <div class="row">
                 <div class="col-7">
-<<<<<<< HEAD
                     <div class="form-row">
                         <!--Employee-->
                         <div class="col-4">
@@ -60,19 +58,8 @@
                                             </div>
                                         </a>
                                     </div>
-=======
-
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="../img/12.jpeg" alt="First slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                <h2 id="animated-example" class="animated bounce">Wel Come</h2>
->>>>>>> 56d8cb4e848d36271016629645d45166b942a42b
                                 </div>
-                                <button></button>
                             </div>
-<<<<<<< HEAD
                         </div>
                         <!--Supplier-->
                         <div class="col-4">
@@ -177,25 +164,6 @@
                 </div>
                 <!--To day petition list-->
                 <div class="col-5 ">
-=======
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/13.jpeg" alt="Second slide">
-                               <!-- <h2 class="animated-example" class="animated bounce">We Care</h2>-->
-
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/9.jpg" alt="Third slide">
-                                <!--<h2 class="animated-example" class="animated bounce">Your Choice</h2>-->
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                  <!--To day petition list-->
-                </div>
-                <div class="col-5 bg-dark formBorder">
->>>>>>> 56d8cb4e848d36271016629645d45166b942a42b
                     <p class="welcome-Notes">To Day Petitions</p>
                     <!--Petition Lists -->
                     <div class="container-fluid text-center" id="petitionListPresent">
@@ -231,7 +199,7 @@
                                 </button>
                                 <h3 class="text-center text-danger">
                                     <strong>There is no petition upto know please add petition to the system
-                                        using add user button.
+                                            using add user button.
                                     </strong>
                                 </h3>
                             </div>
