--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -7,9 +7,22 @@
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
+<!--heading Area-->
+<div class="container-fluid  form-Border">
     <div class="row text-center formManagement border-info">
+        <div class="col">
+            <a href="/home" id="btnHome" class="btn btn-outline-info">
+                &nbsp;Back To Home&nbsp;
+            </a>
+        </div>
 
+        <div class="col">
+            <a class="btn btn-info" href="/employee/add"><i class="fa fa-plus"></i>
+                &nbsp;Add New</a>
+        </div>
+
+    </div>
+    <div class="row text-center">
         <div class="col">
             <h4 class="text-info text-center">
                 <strong>
@@ -17,87 +30,70 @@
                 </strong>
             </h4>
         </div>
-
     </div>
-
 </div>
-
-<div class="row formManagement">
-
-    <div class="col-md-3">
-        <div class="col-md-10">
-        <a class="btn btn-success" href="/employee/add" id="button1"><i class="fa fa-user-plus" style="font-size: 20px"></i>
-            &nbsp; New Employee</a>
+<div class="container-fluid formBorder text-center">
+    <div class="col">
+        <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}">
+            <table class="table table-hover table-striped" id="myTable">
+                <thead>
+                <tr>
+                    <th> Index</th>
+                    <th> Image</th>
+                    <th> Employee Id</th>
+                    <th> Name</th>
+                    <th> Mobile</th>
+                    <th> Designation</th>
+                    <th> Status</th>
+                    <th> Modify</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="employee, rowCount : ${employees}">
+                    <th th:text="${rowCount.count}"></th>
+                    <th>
+                        <div class="image" data-th-if="${employee.fileInfo !=null}" >
+                            <img id="img" class="rounded"
+                                 style="height:50px; width:50px;border-radius: 1px"
+                                 alt="Employee images"
+                                 data-th-src="${employee.fileInfo.url}" />
+                        </div >
+                    </th>
+                    <th th:text="${employee.code}"></th>
+                    <th th:text="${employee.callingName}"></th>
+                    <th th:text="${employee.mobileOne}"></th>
+                    <th th:text="${employee.designation.designation}"></th>
+                    <th th:text="${employee.employeeStatus.employeeStatus}"></th>
+                    <th>
+                        <a id="employeeView" th:href="${'/employee/' + employee.id}" class="btn btn-outline-secondary btn-sm">&nbsp;View</a>
+                        <a id="employeeEdit" th:href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i>&nbsp;Edit</a>
+                        <a id="employeeRemove" th:href="${'/employee/remove/' + employee.id}"
+                           th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>
+                            Delete</a>
+                    </th>
+                </tr>
+                </tbody>
+            </table>
         </div>
-
-        <div class="col-md-10">
-            <a href="/employee/workingPlace" id="searchShow" class="btn btn-primary">
-                <i class="fa fa-user " style="font-size: 20px"></i>&nbsp;Add&nbsp;
-                <i class="fas fa-store-alt" style="font-size: 20px"></i>&nbsp;
-            </a>
-        </div>
-        </div>
-
-
-   <!-- <div class="col-md-1"></div>-->
-
-    <div class="col-md-8  text-center">
-        <div class="col">
-            <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}">
-                <table class="table table-hover table-striped" id="myTable">
-                    <thead>
-                    <tr>
-                        <th> Index</th>
-                        <th> Pay Role Number</th>
-                        <th> Name</th>
-                        <th> Mobile</th>
-                        <th> Designation</th>
-                        <th> Status</th>
-                        <th> Modify</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="employee, rowCount : ${employees}">
-                        <th th:text="${rowCount.count}"></th>
-                        <th th:text="${employee.payRoleNumber}"></th>
-                        <th th:text="${employee.callingName}"></th>
-                        <th th:text="${employee.mobileOne}"></th>
-                        <th th:text="${employee.designation.designation}"></th>
-                        <th th:text="${employee.employeeStatus.employeeStatus}"></th>
-                        <th>
-                            <a id="employeeView" th:href="${'/employee/' + employee.id}" class="btn btn-success btn-sm"><i
-                                    class="fa fa-folder-open"></i>&nbsp;View</a>
-                            <a id="employeeEdit" th:href="${'/employee/edit/' + employee.id}"
-                               class="btn btn-primary btn-sm"><i class="fa fa-edit"></i>&nbsp;Edit</a>
-                            <a id="employeeRemove" th:href="${'/employee/remove/' + employee.id}"
-                               th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-                               class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>
-                                Delete</a>
-                        </th>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row" th:if="${ #lists.isEmpty(employees)}">
-            <div class="col-sm-12">
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h3 class="text-center text-danger">
-                        <strong>There is no employee upto now please add employee to the system
+    </div>
+    <div class="row" th:if="${ #lists.isEmpty(employees)}">
+        <div class="col-sm-12">
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h3 class="text-center text-danger">
+                    <strong>There is no employee upto now please add employee to the system
                             using add user button.
-                        </strong>
-                    </h3>
-                </div>
+                    </strong>
+                </h3>
             </div>
-            <script>
-                /*active boostrap alert - start*/
-                $(".alert").alert();
-                /*active boostrap alert - end*/
-            </script>
         </div>
+        <script>
+            /*active boostrap alert - start*/
+            $(".alert").alert();
+            /*active boostrap alert - end*/
+        </script>
     </div>
 </div>
 <!--footer include-->
