--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,6 +35,10 @@
     <link th:href="@{/css/stylemainwindow.css}" media="all" rel="stylesheet" type="text/css"/>
     <!--Animations-->
     <link th:href="@{/css/animate.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <!--Login-->
+    <link th:href="@{/css/login.css}" media="all" rel="stylesheet" type="text/css"/>
+
 </head>
 <body>
 
