--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,41 +1,63 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
 <body id="loginBack">
-<div class="col full-height " id="loginPage">
-    <h1>Login Here</h1>
-    <div class="col-sm-4">
-        <img  class="logo1" alt JN Super src="../img/logo.png">
-    </div>
-    <div class="col-sm-8">
-        <form th:action="${'/login'}" method="post">
-            <br/>
-            <fieldset>
-                <div class="form-label-group">
-                    <input type="text" id="username" th:name="${'username'}" class="form-control" placeholder="username"
-                           required>
-                    <label for="username">Username</label>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+   Sign Up Here
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="column" id="main">
+
+                    <form method="get" action="${'/login'}" id="login-form" class="login-form" autocomplete="off" role="main">
+                        <h1 class="a11y-hidden">Login Form</h1>
+                        <div>
+                            <label class="label-email">
+                                <input type="email" class="text" name="email" placeholder="Email" tabindex="1" required />
+                                <span class="required">Email</span>
+                            </label>
+                        </div>
+                        <input type="checkbox" name="show-password" class="show-password a11y-hidden" id="show-password" tabindex="3" />
+                        <label class="label-show-password" for="show-password">
+                            <span>Show Password</span>
+                        </label>
+                        <div>
+                            <label class="label-password">
+                                <input type="text" class="text" name="password" placeholder="Password" tabindex="2" required />
+                                <span class="required">Password</span>
+                            </label>
+                        </div>
+                        <input type="submit" value="Log In" />
+                        <div class="email">
+                            <a href="#">Forgot password?</a>
+                        </div>
+                        <figure aria-hidden="true">
+                            <div class="person-body"></div>
+                            <div class="neck skin"></div>
+                            <div class="head skin">
+                                <div class="eyes"></div>
+                                <div class="mouth"></div>
+                            </div>
+                            <div class="hair"></div>
+                            <div class="ears"></div>
+                            <div class="shirt-1"></div>
+                            <div class="shirt-2"></div>
+                        </figure>
+                    </form>
                 </div>
-                <div class="form-label-group">
-                    <input type="password" id="inputPassword" th:name="${'password'}" class="form-control"
-                           placeholder="password"
-                           required>
-                    <label for="inputPassword">Password</label>
+                <div>
                 </div>
-                <div class="form-group text-right">
-                    <button class="btn btn-primary " type="submit">LOGIN</button>
-                </div>
-            </fieldset>
-            <div class="container-fluid " th:if="${param.error}">
-                <p class="bg-white text-capitalize text-danger text-lg-center">Invalid username or password. </p>
+
             </div>
-            <div class="container-fluid ">
-                <p id="errorMessage" th:text="${err}" class="bg-white text-capitalize text-danger text-lg-center"></p>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 <!--footer include-->
