Item Status and MAin Category

--- a/src/main/resources/static/css/myCss.css
+++ b/src/main/resources/static/css/myCss.css
@@ -14,7 +14,7 @@
 
 /*html Background - start*/
 body {
-    background-image: url('../img/loginBackground.jpg');
+    background-image: url('../img/CiXTiiB.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
