--- a/src/main/resources/templates/supplier/supplier.html
+++ b/src/main/resources/templates/supplier/supplier.html
@@ -49,8 +49,9 @@
                     <tr>
                         <th> Index</th>
                         <th> Code</th>
-                        <th> Company Name</th>
+                        <th> Name</th>
                         <th> Contact No1</th>
+                        <th> Contact No2</th>
                         <th> Email</th>
                         <th> Address</th>
                         <th> Modify</th>
@@ -61,6 +62,7 @@
                         <th data-th-text="${rowCount.count}"></th>
                         <th data-th-text="${supplier.code}"></th>
                         <th data-th-text="${supplier.name}"></th>
+                        <th data-th-text="${supplier.contactOne}"></th>
                         <th data-th-text="${supplier.contactOne}"></th>
                         <th data-th-text="${supplier.email}"></th>
                         <th data-th-text="${supplier.address}"></th>
