--- a/src/main/resources/templates/supplier/supplier-detail.html
+++ b/src/main/resources/templates/supplier/supplier-detail.html
@@ -23,6 +23,15 @@
                 </strong>
             </h2>
         </div>
+
+        <!--Supplier Number-->
+        <div class="col">
+            <h2 class="text-light text-center">
+                <strong>
+                    <p data-th-text="${supplierDetail.contactOne}"></p>
+                </strong>
+            </h2>
+        </div>
         <!--Home Button-->
         <div class="col">
             <a class="btn btn-primary" href="/home" tabindex="2">
