--- a/src/main/resources/templates/supplier/supplier.html
+++ b/src/main/resources/templates/supplier/supplier.html
@@ -63,7 +63,7 @@
                         <th data-th-text="${supplier.code}"></th>
                         <th data-th-text="${supplier.name}"></th>
                         <th data-th-text="${supplier.contactOne}"></th>
-                        <th data-th-text="${supplier.contactOne}"></th>
+                        <th data-th-text="${supplier.contactTwo}"></th>
                         <th data-th-text="${supplier.email}"></th>
                         <th data-th-text="${supplier.address}"></th>
                         <th data-th-if="${supplierDetailShow !=true}">
