--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,13 +35,31 @@
     <link th:href="@{/css/image-uploader.min.css}" media="all" rel="stylesheet" type="text/css"/>
     <!--Floating Label-->
     <link th:href="@{/css/floating-labels.css}" media="all" rel="stylesheet" type="text/css"/>
-    <!--style for main window-->
-    <link th:href="@{/css/stylemainwindow.css}" media="all" rel="stylesheet" type="text/css"/>
+<!--    &lt;!&ndash;style for main window&ndash;&gt;-->
+<!--    <link th:href="@{/css/stylemainwindow.css}" media="all" rel="stylesheet" type="text/css"/>-->
     <!--Animations-->
     <link th:href="@{/css/animate.css}" media="all" rel="stylesheet" type="text/css"/>
 
     <!--Login-->
     <link th:href="@{/css/login.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <!-- Fontfaces CSS-->
+    <link th:href="@{/css/font-face.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/vendor/mdi-font/css/material-design-iconic-font.min.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <!-- Vendor CSS-->
+    <link th:href="@{/css/vendor/animsition/animsition.min.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/vendor/bootstrap-progressbar/bootstrap-progressbar-3.3.4.min.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/vendor/wow/animate.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/vendor/css-hamburgers/hamburgers.min.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/vendor/slick/slick.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/vendor/select2/select2.min.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/vendor/perfect-scrollbar/perfect-scrollbar.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <!-- Main Window CSS-->
+    <link th:href="@{/css/theme.css}" media="all" rel="stylesheet" type="text/css"/>
+
+
 
 </head>
 <body>
