--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -32,6 +32,21 @@
     <!--image - uploader javascript-->
     <script th:src="@{/js/image-uploader.min.js}"></script>
 
+    <!-- Vendor JS       -->
+    <script th:src="@{/js/vendor/slick/slick.min.js}"></script>
+    <script th:src="@{/js/vendor/wow/wow.min.js}"></script>
+    <script th:src="@{/js/vendor/animsition/animsition.min.js}"></script>
+    <script th:src="@{/js/vendor/bootstrap-progressbar/bootstrap-progressbar.min.js}"></script>
+    <script th:src="@{/js/vendor/counter-up/jquery.waypoints.min.js}"></script>
+    <script th:src="@{/js/vendor/counter-up/jquery.counterup.min.js}"></script>
+    <script th:src="@{/js/vendor/circle-progress/circle-progress.min.js}"></script>
+    <script th:src="@{/js/vendor/perfect-scrollbar/perfect-scrollbar.js}"></script>
+    <script th:src="@{/js/vendor/select2/select2.min.js}"></script>
+
+    <!-- Main JS-->
+    <script th:src="@{/js/main.js}"></script>
+
+
     <!--notification count get url-->
     <!--  <script>
           $(document).ready(function () {
